force-app/main/default/objects/Itenrary__c/Itenrary__c.object-meta.xml
<CustomObject>
    <label>Itinerary</label>
    <nameField>
        <label>Itenrary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itineraries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>