force-app/main/default/objects/Itenrary__c/fields/Airport__c.field-meta.xml
<CustomField>
    <fullName>Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airport</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Airport</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Itineraries</relationshipLabel>
    <relationshipName>Itineraries</relationshipName>
    <type>Lookup</type>
</CustomField>