force-app/main/default/objects/Itenrary__c/fields/Airport_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Airport_Instructions__c</fullName>
    <label>Airport Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>