force-app/main/default/objects/Itenrary__c/fields/Azurite_Arrive__c.field-meta.xml
<CustomField>
    <fullName>Azurite_Arrive__c</fullName>
    <formula>Booking__r.Arrival_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Azurite Arrive</label>
    <type>DateTime</type>
</CustomField>