force-app/main/default/objects/Itenrary__c/fields/Azurite_Depart__c.field-meta.xml
<CustomField>
    <fullName>Azurite_Depart__c</fullName>
    <formula>Booking__r.Departure_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Azurite Depart</label>
    <type>DateTime</type>
</CustomField>