force-app/main/default/objects/Itenrary__c/fields/Customer_contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this lookup with connect this itenrary with client details.</description>
    <label>Customer Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Associated Contact must have Record type &quot;Customer&quot;</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Itineraries</relationshipLabel>
    <relationshipName>Itineraries1</relationshipName>
    <type>Lookup</type>
</CustomField>