force-app/main/default/objects/Itenrary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Airport__c</columns>
    <columns>Azurite_Arrive__c</columns>
    <columns>Azurite_Depart__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>